--- a/app/views/organizations/_tabs.html.erb
+++ b/app/views/organizations/_tabs.html.erb
@@ -21,7 +21,7 @@
     <%= link_to user_invitations_path, 
         class: "#{base_classes} #{active_tab == :invitations ? active_classes : inactive_classes}" do %>
       <div class="flex items-center gap-2">
-        <span class="text-xs">📨</span>
+        <span class="text-xs">⬇️</span>
         <%= t("invitations.index.title") %>
         <% if current_user.organization_invitations.pending.count > 0 %>
           <span class="du-badge du-badge-sm"><%= current_user.organization_invitations.pending.count %></span>
