--- a/app/views/public/organizations/_organization.html.erb
+++ b/app/views/public/organizations/_organization.html.erb
@@ -1,23 +1,30 @@
 <%= tag.div id: "organization_#{organization.id}", class: "border border-base-content/20 p-4 rounded-lg gap-2 flex flex-col hover:bg-base-200" do %>
-  <%= link_to public_organization_path(organization), data: { turbo_frame: "modal" }, class: "flex items-center gap-3" do %>
+  <%= link_to public_organization_path(organization), data: { turbo_frame: "modal" }, class: "flex items-center gap-2" do %>
     <%= organization_avatar(organization) %>
-    <div>
-      <div class="font-medium">
-        <%= organization.name %>
-      </div>
-      <div class="text-sm">
-        <%= pluralize(organization.users.count, "member") %>
-      </div>
+    <div class="font-medium">
+      <%= organization.name %>
     </div>
   <% end %>
 
-  <div class="flex gap-2 justify-end">
+  <div class="flex gap-2 justify-between">
+    <div class="du-avatar-group -space-x-6">
+      <% max_count = 1 %>
+      <% organization.users.limit(max_count).each do |user| %>
+        <%= user_avatar(user) %>
+      <% end %>
+      <% if organization.users.count > max_count %>
+        <div class="du-avatar du-avatar-placeholder">
+          <div class="bg-neutral text-neutral-content w-8">
+            <span class="text-xs">+<%= organization.users.count - max_count %></span>
+          </div>
+        </div>
+      <% end %>
+    </div>
+      
     <% if organization.participant?(current_user) %>
       <%= link_to t("public.organizations.show.actions.open"), organization_dashboard_path(organization), class: "du-btn du-btn-primary", data: { turbo_frame: "_top" } %>
     <% elsif organization.user_requests.pending.exists?(user: current_user) %>
-      <button class="du-btn du-btn-primary du-btn-disabled" disabled>
-        <%= t("public.organizations.show.actions.waiting_for_approval") %>
-      </button>
+      <%= button_to t("public.organizations.show.actions.cancel_request"), user_membership_request_path(organization.user_requests.pending.find_by(user: current_user)), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error" %>
     <% elsif organization.user_invitations.pending.exists?(user: current_user) %>
       <%= button_to t("public.organizations.show.actions.accept_invitation"), approve_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "du-btn du-btn-primary" %>
       <%= button_to t("public.organizations.show.actions.reject_invitation"), reject_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "du-btn du-btn-primary" %>
