--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
       <% end %>
       <%= active_link_to "Pricing", pricing_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
     <% end %>
-    <%= active_link_to "Search", search_path, data: { turbo_frame: :modal }, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
+    <%= active_link_to "Search", search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
   </div>
 
   <%# auth %>
