--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -26,11 +26,7 @@
                     </div>
                   <% end %>
                 </div>
-                <svg class="size-[1.2em] opacity-60" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2" fill="none" stroke="currentColor">
-                    <path d="M9 5l7 7-7 7"></path>
-                  </g>
-                </svg>
+                <%= inline_svg_tag "svg/chevron-right.svg", class: "size-4" %>
               <% end %>
             </li>
           <% end %>
