--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -32,12 +32,12 @@
           <% end %>
         </ul>
       <% elsif params[:query].present? %>
-        <div class="bg-base-100 rounded-box shadow-md p-6 text-center">
-          <div class="text-base-content/60 mb-2">
-            <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-12 mx-auto mb-2" %>
+        <div class="bg-base-100 rounded-box shadow-md p-6 text-center space-y-3">
+          <div class="text-base-content/60">
+            <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-12 mx-auto" %>
           </div>
           <div class="font-medium text-base-content/80">No results found</div>
-          <div class="text-sm text-base-content/60 mt-1">
+          <div class="text-sm text-base-content/60">
             Try adjusting your search terms
           </div>
         </div>
