use chart icon for dashboard

--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -13,7 +13,7 @@
         <ul class="du-menu">
           <li>
             <%= active_link_to organizations_path, class_active: "du-menu-active", active: :exclusive, title: t("organizations.index.title") do %>
-              <%= inline_svg_tag "svg/home.svg" %>
+              <%= inline_svg_tag "svg/globe-europe-africa.svg" %>
             <% end %>
           </li>
         </ul>
