--- a/app/views/public/organizations/index.html.erb
+++ b/app/views/public/organizations/index.html.erb
@@ -2,10 +2,8 @@
 
 <%= render "organizations/tabs", active_tab: :browse_organizations do %>
   <%= render PageComponent.new(title: t("public.organizations.index.title"), full_width: true) do %>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
-      <% @organizations.each do |organization| %>
-        <%= render "public/organizations/organization", organization: organization %>
-      <% end %>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-4">
+      <%= render collection: @organizations, partial: "public/organizations/organization", as: :organization %>
     </div>
   <% end %>
 <% end %>
