--- a/app/views/organizations/invitations/_invitation.html.erb
+++ b/app/views/organizations/invitations/_invitation.html.erb
@@ -1,6 +1,6 @@
 <div class="border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100">
   <div class="flex items-center gap-2">
-    <%= "User email: #{invitation.user.email}" %>
+    <%= invitation.user.email %>
   </div>
 
   <div class="flex items-center gap-4">
