--- a/app/views/organizations/membership_requests/_membership_request.html.erb
+++ b/app/views/organizations/membership_requests/_membership_request.html.erb
@@ -1,6 +1,6 @@
 <div class="border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-base-200">
   <div class="flex items-center gap-2">
-    <%= "User email: #{membership_request.user.email}" %>
+    <%= membership_request.user.email %>
   </div>
 
   <div class="flex items-center gap-4">
