--- a/app/views/organizations/membership_requests/index.html.erb
+++ b/app/views/organizations/membership_requests/index.html.erb
@@ -2,10 +2,8 @@
 
 <%= render "organizations/memberships/tabs", active_tab: :requests do %>
   <%= render PageComponent.new(title: t("membership_requests.index.title"), full_width: true) do |component| %>
-    <div id="membership_requests" class="space-y-4">
-      <% @membership_requests.each do |membership_request| %>
-        <%= render membership_request, membership_request: %>
-      <% end %>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-4">
+      <%= render collection: @membership_requests, partial: "organizations/membership_requests/membership_request", as: :membership_request %>
     </div>
   <% end %>
 <% end %>
