--- a/app/views/organizations/memberships/_membership.html.erb
+++ b/app/views/organizations/memberships/_membership.html.erb
@@ -8,10 +8,8 @@
     </div>
   </div>
 
-  <div>
-    <%= link_to t("shared.actions.edit"), edit_organization_membership_path(membership.organization, membership), data: { turbo_frame: :modal }, class: "du-btn du-btn-secondary" if policy(membership).edit? %>
-    <div class="inline-block">
-      <%= button_to Current.membership == membership ? t("organizations.memberships.actions.leave") : t("organizations.memberships.actions.remove_member"), organization_membership_path(membership.organization, membership), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error" if policy(membership).destroy? %>
-    </div>
+  <div class="flex items-center gap-2">
+    <%= link_to t("shared.actions.edit"), edit_organization_membership_path(membership.organization, membership), data: { turbo_frame: :modal }, class: "du-btn du-btn-sm du-btn-secondary" if policy(membership).edit? %>
+    <%= button_to Current.membership == membership ? t("organizations.memberships.actions.leave") : t("organizations.memberships.actions.remove_member"), organization_membership_path(membership.organization, membership), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-sm du-btn-error" if policy(membership).destroy? %>
   </div>
 </div>
