--- a/app/views/organizations/invitations/_invitation.html.erb
+++ b/app/views/organizations/invitations/_invitation.html.erb
@@ -1,9 +1,9 @@
-<div class="border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100">
+<div class="border border-base-content/20 p-2 rounded-lg space-y-2">
   <div class="font-medium">
     <%= invitation.user.email %>
   </div>
 
-  <div class="flex items-center gap-2">
+  <div class="flex items-center justify-end gap-2">
     <%= button_to t("organizations.invitations.buttons.cancel"), organization_invitation_path(invitation.organization, invitation), method: :delete, class: "du-btn du-btn-sm du-btn-error" %>
   </div>
 </div>
