--- a/app/views/organizations/membership_requests/_membership_request.html.erb
+++ b/app/views/organizations/membership_requests/_membership_request.html.erb
@@ -1,9 +1,9 @@
-<div class="border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-base-200">
+<div class="border border-base-content/20 p-2 rounded-lg space-y-2">
   <div class="font-medium">
     <%= membership_request.user.email %>
   </div>
 
-  <div class="flex items-center gap-2">
+  <div class="flex items-center justify-end gap-2">
     <%= button_to t("membership_requests.buttons.approve"), approve_organization_membership_request_path(@organization, membership_request), method: :post, class: "du-btn du-btn-sm du-btn-primary" %>
     <%= button_to t("membership_requests.buttons.reject"), reject_organization_membership_request_path(@organization, membership_request), method: :post, class: "du-btn du-btn-sm du-btn-error" %>
   </div>
