--- a/app/views/organizations/memberships/_membership.html.erb
+++ b/app/views/organizations/memberships/_membership.html.erb
@@ -1,5 +1,5 @@
-<div id="<%= dom_id membership %>" class="border p-4 rounded-lg flex justify-between items-center">
-  <div class="">
+<div class="border border-base-content/20 p-2 rounded-lg space-y-2">
+  <div class="flex items-center gap-2">
     <div class="font-medium">
       <%= membership.user.email %>
     </div>
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class="flex items-center gap-2">
+  <div class="flex items-center justify-end gap-2">
     <%= link_to t("shared.actions.edit"), edit_organization_membership_path(membership.organization, membership), data: { turbo_frame: :modal }, class: "du-btn du-btn-sm du-btn-secondary" if policy(membership).edit? %>
     <%= button_to Current.membership == membership ? t("organizations.memberships.actions.leave") : t("organizations.memberships.actions.remove_member"), organization_membership_path(membership.organization, membership), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-sm du-btn-error" if policy(membership).destroy? %>
   </div>
