--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -12,7 +12,7 @@
 
         <ul class="du-menu">
           <li>
-            <%= active_link_to organizations_path, class_active: "du-menu-active", active: :exclusive, title: t("organizations.index.title"), active: [['organizations', 'public/organizations', 'users/invitations', 'users/membership_requests'], []] do %>
+            <%= active_link_to organizations_path, class_active: "du-menu-active", active: :exclusive, title: t("organizations.index.title"), active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [] ] do %>
               <%= inline_svg_tag "svg/globe-europe-africa.svg" %>
             <% end %>
           </li>
