Style user/organizations (#257)
* reuse common org card style

* hide search when not logged in

* paywalled page under projects

* Update _organization.html.erb

* reuse

* Update index.html.erb

* invites

* closeOnClickOutside dialog option

* abstract organizations/users_list

* Update membership_requests_controller.rb

* wip

* wip

* style

* w

* Update _navbar.html.erb

* badge styles

* standartize

* w

* cleanup

* w

* great

* w

--- a/app/views/users/invitations/index.html.erb
+++ b/app/views/users/invitations/index.html.erb
@@ -2,10 +2,8 @@
 
 <%= render "organizations/tabs", active_tab: :invitations do %>
   <%= render PageComponent.new(title: t("invitations.index.title"), full_width: true) do |component| %>
-    <div id="invitations" class="space-y-4">
-      <% @invitations.each do |invitation| %>
-        <%= render invitation, invitation: %>
-      <% end %>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-4">
+      <%= render collection: @organizations, partial: "organizations/organization", as: :organization %>
     </div>
   <% end %>
 <% end %>
