--- a/app/views/public/organizations/_organization.html.erb
+++ b/app/views/public/organizations/_organization.html.erb
@@ -1,4 +1,4 @@
-<%= tag.div id: "organization_#{organization.id}", class: "border border-base-content/20 p-4 rounded-lg gap-2 flex flex-col hover:bg-base-200" do %>
+<%= tag.div id: dom_id(organization), class: "border border-base-content/20 p-2 rounded-lg gap-2 flex flex-col hover:bg-base-200" do %>
   <%= link_to public_organization_path(organization), data: { turbo_frame: "modal" }, class: "flex items-center gap-2" do %>
     <%= organization_avatar(organization) %>
     <div class="font-medium">
@@ -6,30 +6,8 @@
     </div>
   <% end %>
 
-  <div class="flex gap-2 justify-between">
-    <div class="du-avatar-group -space-x-6">
-      <% max_count = 1 %>
-      <% organization.users.limit(max_count).each do |user| %>
-        <%= user_avatar(user) %>
-      <% end %>
-      <% if organization.users.count > max_count %>
-        <div class="du-avatar du-avatar-placeholder">
-          <div class="bg-neutral text-neutral-content w-8">
-            <span class="text-xs">+<%= organization.users.count - max_count %></span>
-          </div>
-        </div>
-      <% end %>
-    </div>
-      
-    <% if organization.participant?(current_user) %>
-      <%= link_to t("public.organizations.show.actions.open"), organization_dashboard_path(organization), class: "du-btn du-btn-primary", data: { turbo_frame: "_top" } %>
-    <% elsif organization.user_requests.pending.exists?(user: current_user) %>
-      <%= button_to t("public.organizations.show.actions.cancel_request"), user_membership_request_path(organization.user_requests.pending.find_by(user: current_user)), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error" %>
-    <% elsif organization.user_invitations.pending.exists?(user: current_user) %>
-      <%= button_to t("public.organizations.show.actions.accept_invitation"), approve_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "du-btn du-btn-primary" %>
-      <%= button_to t("public.organizations.show.actions.reject_invitation"), reject_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "du-btn du-btn-primary" %>
-    <% else %>
-      <%= button_to t("public.organizations.show.actions.#{organization.privacy_setting_public? ? "join" : "request_to_join"}"), user_membership_requests_path(organization_id: organization.id), method: :post, class: "du-btn du-btn-primary" %>
-    <% end %>
+  <%= render "organizations/users_list", organization: %>
+  <div class="flex gap-2 justify-end">
+    <%= render "organizations/membership_actions", organization: %>
   </div>
 <% end %>
